added set for debugging purposes

--- a/.github/workflows/push-repos-to-ca.yaml
+++ b/.github/workflows/push-repos-to-ca.yaml
@@ -43,6 +43,8 @@ jobs:
       - name: Determine packages to process
         id: new_packages
         run: |
+          set -x
+          set -e
           # Clean and sort files
           sort required_packages.txt | grep -vE '^\s*#|^\s*$' > current.txt
           sort $LOCKFILE | grep -vE '^\s*#|^\s*$' > lock_sorted.txt
