--- a/.github/workflows/push-repos-to-ca.yaml
+++ b/.github/workflows/push-repos-to-ca.yaml
@@ -35,20 +35,12 @@ jobs:
         run: |
           pip install awscli packaging
 
-      - name: Prepare lockfile
-        run: |
-          LOCKFILE=approved_packages.lock
-          touch $LOCKFILE
-
       - name: Determine packages to process
         id: new_packages
         run: |
-          set -x
-          set -e
-          ls
           # Clean and sort files
           sort required_packages.txt | grep -vE '^\s*#|^\s*$' > current.txt
-          sort $LOCKFILE | grep -vE '^\s*#|^\s*$' > lock_sorted.txt
+          sort approved_packages.lock | grep -vE '^\s*#|^\s*$' > lock_sorted.txt
 
           # Get new packages not yet in lockfile
           # If comm produces no output, don't fail
