--- a/.github/workflows/push-repos-to-ca.yaml
+++ b/.github/workflows/push-repos-to-ca.yaml
@@ -114,18 +114,18 @@ jobs:
             fname=$(basename "$file")
 
             # Parse package name and version reliably
-            read pkg ver <<< $(python3 - <<END
+            read pkg ver <<< $(python3 - <<'PYTHON_END'
               from packaging.utils import canonicalize_name
-              import re, sys
+              import re, sys, os
 
-              fname = "$fname"
+              fname = os.environ.get('FNAME', '')
               fname_no_ext = re.sub(r'(\.tar\.gz|\.zip|\.whl)$', '', fname)
               parts = fname_no_ext.rsplit('-', maxsplit=1)
               if len(parts) != 2:
                   sys.exit()
               name, ver = parts
               print(canonicalize_name(name), ver)
-              END
+              PYTHON_END
             )
 
             if [ -z "$pkg" ] || [ -z "$ver" ]; then
