--- a/.github/workflows/push-repos-to-ca.yaml
+++ b/.github/workflows/push-repos-to-ca.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 2  # Needed to get previous commit
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -51,9 +51,11 @@ jobs:
           set -x
           ls -l
           
+          # Clean and sort files
           sort required_packages.txt | grep -vE '^\s*#|^\s*$' > current.txt || true
           sort approved_packages.lock | grep -vE '^\s*#|^\s*$' > lock_sorted.txt || true
 
+          # Validate package format in required_packages.txt
           while IFS= read -r line; do
             if [[ ! "$line" =~ ^[a-zA-Z0-9_-]+==[0-9]+\.[0-9]+(\.[0-9]+)?$ ]]; then
               echo "Error: Invalid package format in required_packages.txt: '$line'"
@@ -61,12 +63,15 @@ jobs:
             fi
           done < current.txt
 
+          # Get new packages not yet in lockfile
           comm -23 current.txt lock_sorted.txt > new_packages.txt 2>/dev/null || true
 
           echo "New packages to process:"
           cat new_packages.txt || echo "(none)"
 
+          # Ensure NEW_PACKAGES is clean and properly formatted
           if [ -s new_packages.txt ]; then
+            # Remove any empty lines or comments, and join with newlines
             NEW_PACKAGES=$(cat new_packages.txt | grep -vE '^\s*#|^\s*$')
             echo "NEW_PACKAGES<<EOF" >> $GITHUB_ENV
             echo "$NEW_PACKAGES" >> $GITHUB_ENV
@@ -91,7 +96,9 @@ jobs:
           echo "Packages to process:"
           echo "$PACKAGES_TO_PROCESS"
 
+          # Process each package with error handling
           echo "$PACKAGES_TO_PROCESS" | while IFS= read -r line; do
+            # Skip empty lines or comments
             [[ -z "$line" || "$line" =~ ^# ]] && continue
 
             echo "Downloading package: $line"
@@ -106,20 +113,20 @@ jobs:
             [ -f "$file" ] || continue
             fname=$(basename "$file")
 
+            # Parse package name and version using Python
             export FNAME="$fname"
-            result=$(python3 << 'EOF'
-            import re, os
-            from packaging.utils import canonicalize_name
+            result=$(python3 -c "
+              from packaging.utils import canonicalize_name
+              import re, sys, os
 
-            fname = os.environ['FNAME']
-            fname_no_ext = re.sub(r'(\.tar\.gz|\.zip|\.whl)$', '', fname)
-            parts = fname_no_ext.rsplit('-', maxsplit=1)
-            if len(parts) == 2:
-                name, ver = parts
-                print(canonicalize_name(name), ver)
-            EOF
-            )
-
+              fname = os.environ['FNAME']
+              fname_no_ext = re.sub(r'(\.tar\.gz|\.zip|\.whl)\$', '', fname)
+              parts = fname_no_ext.rsplit('-', maxsplit=1)
+              if len(parts) == 2:
+                  name, ver = parts
+                  print(canonicalize_name(name), ver)
+              " 2>/dev/null || echo "")
+            echo $result
             read pkg ver <<< "$result"
 
             if [ -z "$pkg" ] || [ -z "$ver" ]; then
