--- a/.github/workflows/push-repos-to-ca.yaml
+++ b/.github/workflows/push-repos-to-ca.yaml
@@ -151,7 +151,7 @@ jobs:
               --package "$pkg" \
               --package-version "$ver" \
               --asset-name "$fname" \
-              --asset fileb://"$file"; then
+              --asset-content fileb://"$file"; then
               echo "Successfully uploaded $pkg==$ver"
               echo "$pkg==$ver" >> approved_packages.lock
             else
