--- a/.github/workflows/push-repos-to-ca.yaml
+++ b/.github/workflows/push-repos-to-ca.yaml
@@ -147,7 +147,7 @@ jobs:
             # Calculate SHA256 hash of the file
             file_sha256=$(sha256sum "$file" | awk '{print $1}')
             echo "SHA256: $file_sha256"
-            echo "fileb://$file"
+            
             if aws codeartifact publish-package-version \
               --domain "$DOMAIN" \
               --repository "$REPO" \
@@ -155,7 +155,7 @@ jobs:
               --package "$pkg" \
               --package-version "$ver" \
               --asset-name "$fname" \
-              --asset-content "fileb://$file" \
+              --asset-content fileb://$file \
               --asset-sha256 "$file_sha256"; then
               echo "Successfully uploaded $pkg==$ver"
               echo "$pkg==$ver" >> approved_packages.lock
